--- a/package.json
+++ b/package.json
@@ -9,19 +9,42 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.18.1",
+    "@clerk/themes": "^2.2.37",
+    "@lexical/react": "^0.24.0",
+    "@lexical/rich-text": "^0.24.0",
+    "@liveblocks/client": "^2.24.1",
+    "@liveblocks/node": "^2.24.1",
+    "@liveblocks/react": "^2.24.1",
+    "@liveblocks/react-lexical": "^2.24.1",
+    "@liveblocks/react-ui": "^2.24.1",
+    "@radix-ui/react-dialog": "^1.1.11",
+    "@radix-ui/react-label": "^2.1.4",
+    "@radix-ui/react-popover": "^1.1.11",
+    "@radix-ui/react-select": "^2.2.2",
+    "@radix-ui/react-slot": "^1.2.0",
+    "@sentry/nextjs": "^9.15.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "jsm-editor": "^0.0.12",
+    "lexical": "^0.24.0",
+    "lucide-react": "^0.503.0",
+    "nanoid": "^5.1.5",
+    "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.3.1"
+    "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
-    "@eslint/eslintrc": "^3"
+    "tailwindcss": "^4",
+    "tw-animate-css": "^1.2.8",
+    "typescript": "^5"
   }
 }
