--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "dependencies": {
     "@clerk/nextjs": "^6.18.1",
     "@clerk/themes": "^2.2.37",
-    "@lexical/react": "^0.24.0",
-    "@lexical/rich-text": "^0.24.0",
+    "@lexical/react": "0.24.0",
+    "@lexical/rich-text": "0.24.0",
     "@liveblocks/client": "^2.24.1",
     "@liveblocks/node": "^2.24.1",
     "@liveblocks/react": "^2.24.1",
@@ -27,7 +27,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "jsm-editor": "^0.0.12",
-    "lexical": "^0.24.0",
+    "lexical": "0.24.0",
     "lucide-react": "^0.503.0",
     "nanoid": "^5.1.5",
     "next": "15.3.1",
