--- a/package.json
+++ b/package.json
@@ -12,12 +12,9 @@
   "dependencies": {
     "@clerk/nextjs": "^6.18.1",
     "@clerk/themes": "^2.2.37",
-    "@lexical/react": "0.24.0",
-    "@lexical/rich-text": "0.24.0",
     "@liveblocks/client": "^2.24.1",
     "@liveblocks/node": "^2.24.1",
     "@liveblocks/react": "^2.24.1",
-    "@liveblocks/react-lexical": "^2.24.1",
     "@liveblocks/react-ui": "^2.24.1",
     "@radix-ui/react-dialog": "^1.1.11",
     "@radix-ui/react-label": "^2.1.4",
@@ -27,14 +24,17 @@
     "@sentry/nextjs": "^9.15.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "jsm-editor": "^0.0.12",
-    "lexical": "0.24.0",
     "lucide-react": "^0.503.0",
     "nanoid": "^5.1.5",
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwind-merge": "^3.2.0"
+    "tailwind-merge": "^3.2.0",
+    "@lexical/react": "0.24.0",
+    "@lexical/rich-text": "0.24.0",
+    "lexical": "0.24.0",
+    "@liveblocks/react-lexical": "2.24.1",
+    "jsm-editor": "0.0.12"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
